@@ -1,3 +1,8 @@
+2013-05-15  Leo Liu  <sdl.web@gmail.com>
+
+	* progmodes/octave.el (octave-goto-function-definition): Improve
+	and fix callers.
+
 2013-05-15  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* emacs-lisp/cl-extra.el (cl-getf): Return the proper value in
